fixed some layout shift issues, redefined section id with tilde

--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -249,6 +249,7 @@
 }
 
 .btn-sign-in:hover .sign-in-icon {
+  scale: 98%;
   opacity: 90%;
 }
 
